# rest-in-pytest

./: README.md  pyproject.toml
rest_in_pytest/: __init__.py  builder.py  error.py  expect.py  logger.py  reporter.py  request.py  request_config.py  request_specs.py
tests/: conftest.py  test_rip.py
